--- a/multi-tenent-e-commerce/package.json
+++ b/multi-tenent-e-commerce/package.json
@@ -75,7 +75,8 @@
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "zod": "3.24.2"
+    "zod": "3.24.2",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
     "typescript": "^5",
