--- a/multi-tenent-e-commerce/package.json
+++ b/multi-tenent-e-commerce/package.json
@@ -71,6 +71,7 @@
     "recharts": "2.15.4",
     "server-only": "0.0.1",
     "sonner": "^2.0.7",
+    "stripe": "18.0.0",
     "superjson": "2.2.2",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
