--- a/multi-tenent-e-commerce/package.json
+++ b/multi-tenent-e-commerce/package.json
@@ -13,7 +13,8 @@
     "db:seed": "payload run src/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.3.4",
+    "@base-ui/react": "^1.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-mongodb": "^3.69.0",
     "@payloadcms/next": "^3.69.0",
     "@payloadcms/payload-cloud": "^3.69.0",
@@ -58,16 +59,17 @@
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.562.0",
+    "lucide-react": "^0.563.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nuqs": "2.4.1",
     "payload": "^3.69.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.68.0",
-    "react-resizable-panels": "^4.0.8",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.5.6",
     "recharts": "2.15.4",
     "server-only": "0.0.1",
     "sonner": "^2.0.7",
@@ -76,7 +78,7 @@
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
-    "zod": "3.24.2",
+    "zod": "^4.3.6",
     "zustand": "5.0.3"
   },
   "devDependencies": {
